--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -4,12 +4,12 @@
             animeList</a></div>
 
             <ul class="navbar-nav">
-                <li><a *ngIf="hardCodedAuthService.IsUserLoggedIn()" routerLink="/welcome/admin" class="nav-link">Home</a></li>
-                <li><a  *ngIf="hardCodedAuthService.IsUserLoggedIn()" routerLink="/todos" class="nav-link">Todos</a></li>
+                <li><a *ngIf="basicAuthService.IsUserLoggedIn()" routerLink="/welcome/admin" class="nav-link">Home</a></li>
+                <li><a  *ngIf="basicAuthService.IsUserLoggedIn()" routerLink="/todos" class="nav-link">Todos</a></li>
             </ul>
             <ul class="navbar-nav navbar-collapse justify-content-end">
-                <li><a *ngIf="!hardCodedAuthService.IsUserLoggedIn()"  routerLink="/login" class="nav-link">Login</a></li>
-                <li><a  *ngIf="hardCodedAuthService.IsUserLoggedIn()" routerLink="/logout" class="nav-link">Logout</a></li>
+                <li><a *ngIf="!basicAuthService.IsUserLoggedIn()"  routerLink="/login" class="nav-link">Login</a></li>
+                <li><a  *ngIf="basicAuthService.IsUserLoggedIn()" routerLink="/logout" class="nav-link">Logout</a></li>
             </ul>
         </nav>
 </header>
